<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="sEU_SCALE" Id="{13a79b9c-b610-4891-a145-99a94036c64b}">
    <Declaration><![CDATA[TYPE sEU_SCALE :
STRUCT
	rawLo: INT := 0;
	rawHi: INT := 32767;
	euLo: LREAL := 0.0;
	euHi: LREAL := 100.0;
	eu: STRING[20] := '%';
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>